Fix get access to analytics text too large for new smaller statistics

--- a/src/components/dashboard/statistic/style.scss
+++ b/src/components/dashboard/statistic/style.scss
@@ -21,7 +21,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        top: 40px;
+        top: 14px;
         text-align: center;
         margin: auto;
         width: 80%;
